# crypting

./: .gitignore  .travis.yml  COPYRIGHT.md  LICENSE  Makefile.am  Makefile.in  PackageInfo.g  README.md  autogen.sh  configure.ac  init.g  makedoc.g  read.g
.github/workflows/: CI.yml
_data/: package.yml
doc/: chap0.html  chap0.txt  chap0_mj.html  chap1.html  chap1.txt  chap1_mj.html  chapInd.html  chapInd.txt  chapInd_mj.html  crypting.xml  title.xml
gap/: crypting.gd  crypting.gi
src/: crypting.c
tst/: hmacsha256.tst  sha256.tst  testall.g
